--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             </ul>
         </div>
     </header>
-    <div class="hero"></div>
+    <!---
+    <--Changed div to figure for picture-->
+    <figure title="Helping others collaborate"></figure>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
