Changed div to main

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </ul>
         </div>
     </header>
-    <!---
-    <--Changed div to figure for picture-->
+
+    <!--Changed div to figure for picture, added title-->
     <figure title="Helping others collaborate"></figure>
-    <div class="content">
+    <main>
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -49,7 +49,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </main>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
